--- a/motd_stat.service
+++ b/motd_stat.service
@@ -7,11 +7,11 @@ After=getty.target
 Type=simple
 Restart=always
 RestartSec=5
-WorkingDirectory=/var/lib/motd_gen
+WorkingDirectory=/var/lib/motd-generator
 User=motd
 Group=motd
 ExecStart=/usr/bin/motd_stat.py
-MemoryHigh=100M
+MemoryLimit=128M
 CPUQuota=20%
 
 [Install]
